--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,6 @@ export(get_bm_data_qs)
 export(gev.d.fit.sl)
 export(nllh.sl.d)
 importFrom(magrittr,"%>%")
+importFrom(stats,make.link)
+importFrom(stats,optim)
+importFrom(utils,combn)
