--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,16 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr
+    assertthat,
+    dplyr,
+    evd,
+    IDF,
+    lubridate,
+    magrittr,
+    purrr,
+    RcppRoll,
+    stats,
+    tibble,
+    tidyr,
+    utils
 Roxygen: list(markdown = TRUE)
