--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(compute_qsi)
 export(cv_fit_eff)
 export(dgev_cv_fit)
 export(fit_cv_slow)
+export(fit_dgev_cv_qs)
 export(fun_aggregate)
 export(fun_aggregate2df)
 export(get_agg_bm)
