--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,9 @@ Imports:
     tidyr,
     utils
 Roxygen: list(markdown = TRUE)
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
