added functions for fitting spatial GEV under homogeneity constraint

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(compute_qs)
 export(compute_qsi)
 export(cv_fit_eff)
 export(dgev_cv_fit)
+export(fgev_hom)
 export(fit_cv_slow)
 export(fit_dgev_cv_qs)
 export(fun_aggregate)
@@ -17,8 +18,10 @@ export(fun_aggregate2df)
 export(get_agg_bm)
 export(get_blcksz)
 export(get_bm_data_qs)
+export(get_uniq_bm)
 export(gev.d.fit.sl)
 export(nllh.sl.d)
+export(prep4spatml)
 importFrom(magrittr,"%>%")
 importFrom(stats,make.link)
 importFrom(stats,optim)
