--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(get_blcksz)
 export(get_bm_data_qs)
 export(get_uniq_bm)
 export(gev.d.fit.sl)
+export(nll_spat_temp_sl_hom)
+export(nll_spat_temp_sl_prep)
 export(nllh.sl.d)
 export(prep4spatml)
 importFrom(magrittr,"%>%")
