fix warnings from check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(fun_aggregate2df)
 export(get_agg_bm)
 export(get_blcksz)
 export(get_bm_data_qs)
+export(get_start_vals)
 export(get_uniq_bm)
 export(gev.d.fit.sl)
 export(nll_spat_temp_sl_hom)
@@ -25,6 +26,12 @@ export(nll_spat_temp_sl_prep)
 export(nllh.sl.d)
 export(prep4spatml)
 importFrom(magrittr,"%>%")
+importFrom(stats,lm)
 importFrom(stats,make.link)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,na.pass)
 importFrom(stats,optim)
+importFrom(stats,reformulate)
+importFrom(stats,update)
 importFrom(utils,combn)
