univariate gev fit with trend (shift and scale), corresponding covariance matrix estimation and RL variance estimation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,12 @@ export(compute_qs)
 export(compute_qsi)
 export(cv_fit_eff)
 export(dgev_cv_fit)
+export(est_var_wtrend)
+export(estimate_var_rl)
 export(fgev_hom)
 export(fit_cv_slow)
 export(fit_dgev_cv_qs)
+export(fit_gev_univ_trend)
 export(fit_spgev_sl)
 export(fun_aggregate)
 export(fun_aggregate2df)
