--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,22 @@ export("%>%")
 export(MDAdata)
 export(blockmax)
 export(bm_concat_years)
+export(boot_sl)
 export(check_fun)
+export(ci_student_boot_sl)
 export(compute_conc_bm)
 export(compute_conc_bm_id)
 export(compute_qs)
 export(compute_qsi)
+export(compute_rl)
 export(cv_fit_eff)
 export(dgev_cv_fit)
-export(est_var_wtrend)
+export(est_var_univ)
 export(estimate_var_rl)
 export(fgev_hom)
 export(fit_cv_slow)
 export(fit_dgev_cv_qs)
-export(fit_gev_univ_trend)
+export(fit_gev_univ)
 export(fit_spgev_sl)
 export(fun_aggregate)
 export(fun_aggregate2df)
@@ -25,11 +28,13 @@ export(get_blcksz)
 export(get_bm_data_qs)
 export(get_start_vals)
 export(get_uniq_bm)
+export(get_uniq_bm_boot)
 export(gev.d.fit.sl)
 export(nll_spat_temp_sl_hom)
 export(nll_spat_temp_sl_prep)
 export(nllh.sl.d)
 export(prep4spatml)
+export(sample_boot_sl)
 export(sim_spatial)
 export(theo_pars)
 importFrom(SpatialExtremes,rmaxstab)
