functions for variance estimation based on chain rule

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(compute_rl)
 export(cv_fit_eff)
 export(dgev_cv_fit)
 export(est_var_univ)
+export(est_var_univ_shift)
 export(estimate_var_rl)
 export(fgev_hom)
 export(fit_cv_slow)
