--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,13 @@ export(compute_qsi)
 export(compute_rl)
 export(cv_fit_eff)
 export(dgev_cv_fit)
+export(est_var_chain)
 export(est_var_univ)
 export(estimate_var_rl)
 export(fgev_hom)
 export(fit_cv_slow)
 export(fit_dgev_cv_qs)
+export(fit_gev_cv_qs)
 export(fit_gev_univ)
 export(fit_gev_univ_dj)
 export(fit_spgev_sl)
